syntax = "proto3";

option java_package="com.lpc";
option java_outer_classname="PublicGRPC";

message ResultBool{
  bool result = 1;
}

message Id{
  oneof id{
    int64 commonId = 1;
    string userId = 2;
  }

}

message Common{
  oneof common{
    int64 commonId = 1;
    string userId = 2;
  }
}

message VoidMessage{}
